# Backstaff

./: .gitignore  Cargo.toml  README.md  build.rs  get_backstaff.sh  setup_backstaff
backstaff/: array_utils.py  autoviz.py  beam_heating.py  chianti_synthesis.py  chianti_synthesis_extra.py  corks.py  electron_beams.py  field_lines.py  fields.py  helita_utils.py  plotting.py  reading.py  running.py  units.py
backstaff-build-config/: Cargo.toml  build.rs
backstaff-build-config/src/: lib.rs
backstaff/paraview/: backstaff.py
bifrost_utils/: electron_beams.py  field_lines.py  fields.py  reading.py  running.py
bifrust/: .style.yapf  electron_beams.py  field_lines.py  fields.py  plotting.py  reading.py  running.py  units.py
docs/: Gemfile  _config.yml  index.md
scripts/: electron_beams.py  field_lines.py  fields.py  plotting.py  reading.py  running.py
src/: cli.rs  constants.rs  corks.rs  data.rs  ebeam.rs  error.rs  field.rs  geometry.rs  grid.rs  interpolation.rs  io.rs  lib.rs  math.rs  num.rs  plasma.rs  random.rs  reading.rs  seeding.rs  tracing.rs  units.rs
src/cli/: build.rs  command_graph.rs  completions.rs  ebeam.rs  interpolation.rs  mesh.rs  quantities.rs  run.rs  seeding.rs  snapshot.rs  tracing.rs  utils.rs
src/cli/ebeam/: accelerator.rs  detection.rs  distribution.rs  propagator.rs  simulate.rs
src/cli/ebeam/accelerator/: dc_power_law.rs  simple_power_law.rs
src/cli/ebeam/detection/: manual.rs  simple.rs
src/cli/ebeam/distribution/: power_law.rs
src/cli/ebeam/propagator/: analytical.rs  fp_characteristics.rs
src/cli/interpolation/: poly_fit.rs
src/cli/mesh/: horizontally_extended.rs  horizontally_regular.rs  regular.rs
src/cli/seeding/: criterion.rs  manual.rs  slice.rs  volume.rs
src/cli/seeding/slice/: pdf.rs  random.rs  regular.rs  stratified.rs
src/cli/seeding/volume/: pdf.rs  random.rs  regular.rs  stratified.rs
src/cli/snapshot/: corks.rs  derive.rs  extract.rs  inspect.rs  modify_aux.rs  resample.rs  slice.rs  synthesize.rs  write.rs
src/cli/snapshot/inspect/: statistics.rs
src/cli/snapshot/modify_aux/: compute.rs  remove.rs
src/cli/snapshot/resample/: cell_averaging.rs  direct_sampling.rs  downsampling.rs  general.rs  mesh_file.rs  regular_grid.rs  resampling.rs  reshaped_grid.rs  rotated_regular_grid.rs  same_grid.rs  sample_averaging.rs  sampling.rs  upsampling.rs  weighted_cell_averaging.rs  weighted_sample_averaging.rs
src/cli/tracing/: field_line.rs  seeding.rs  stepping.rs
src/cli/tracing/field_line/: basic.rs
src/cli/tracing/seeding/: manual.rs  slice.rs
src/cli/tracing/seeding/slice/: pdf.rs  random.rs  regular.rs  stratified.rs
src/cli/tracing/stepping/: rkf.rs
src/ebeam/: acceleration.rs  accelerator.rs  detection.rs  distribution.rs  execution.rs  propagation.rs
src/ebeam/acceleration/: simple.rs
src/ebeam/detection/: manual.rs  simple.rs
src/ebeam/distribution/: power_law.rs
src/ebeam/distribution/power_law/: acceleration.rs
src/ebeam/distribution/power_law/acceleration/: dc.rs  simple.rs
src/ebeam/distribution/power_law/acceleration/dc/: acceleration_region.rs
src/ebeam/execution/: cli.rs  simulation.rs
src/ebeam/propagation/: analytical.rs  fp_characteristics.rs
src/ebeam/propagation/fp_characteristics/: atmosphere.rs  transport.rs
src/field/: quantities.rs  synthesis.rs
src/grid/: hor_regular.rs  regular.rs
src/interpolation/: cubic_hermite_spline.rs  poly_fit.rs
src/io/: mesh.rs  snapshot.rs  utils.rs  xdmf.rs
src/io/snapshot/: native.rs  netcdf.rs  utils.rs
src/io/snapshot/native/: mesh.rs  param.rs
src/io/snapshot/netcdf/: mesh.rs  param.rs
src/plasma/: ionization.rs
src/seeding/: criterion.rs  manual.rs  slice.rs  volume.rs
src/tracing/: field_line.rs  seeding.rs  stepping.rs
src/tracing/field_line/: basic.rs  natural.rs  regular.rs
src/tracing/seeding/: criterion.rs  manual.rs  slice.rs
src/tracing/stepping/: rkf.rs
src/tracing/stepping/rkf/: rkf23.rs  rkf45.rs
src/units/: solar.rs
tests/: integration_tests.rs  profile_builds.sh  regression_tests.rs  test_builds.sh
tests/common/: mod.rs
tests/regression/: mod.rs
