[package]
name = "backstaff"
version = "0.3.0"
authors = ["Lars Frogner <lars.frogner@astro.uio.no>"]
description = "A flexible tookit for working with Bifrost simulations"
edition = "2021"
default-run = "backstaff"

[features]
default = ["cli", "statistics"]
cli = ["chrono", "clap", "clap_complete", "paste"]
command-graph = ["cli", "petgraph"]
statistics = ["cli", "float-pretty-print", "ndarray-stats", "noisy_float", "pad"]
serialization = ["serde", "ndarray/serde"]
python = ["pyo3", "numpy"]
json = ["serialization", "serde_json"]
pickle = ["serialization", "serde-pickle"]
netcdf = ["netcdf-rs"]
hdf5 = ["hdf5-rs", "regex"]
seeding = ["rand"]
corks = ["seeding"]
tracing = ["seeding"]
ebeam = ["tracing", "rand", "special"]
synthesis = ["python", "roman"]
comparison = ["approx"]

[dependencies]
# Dependencies for core
atty = "*"
byteorder = "*"
ieee754 = "*"
indicatif = {version = "*", features = ["rayon"]}
lazy_static = "*"
ndarray = { version = "*", features = ["rayon"] }
num = "*"
rayon = "*"
regex = "*"
sysinfo = { version = "*", default-features = false }
tempfile = "*"

# Dependencies for cli
chrono = { version = "*", optional = true }
clap = { version = ">=3.0.0", features = ["default", "cargo"], optional = true }
clap_complete = { version = "*", optional = true }
paste = { version = "*", optional = true }

# Dependencies for command-graph
petgraph = { version = "*", features = [], optional = true }

# Dependencies for statistics
float-pretty-print = { version = "*", optional = true }
ndarray-stats = { version = "*", optional = true }
noisy_float = { version = "*", optional = true }
pad = { version = "*", optional = true }

# Dependencies for serialization
serde = { version = "*", features = ["derive"], optional = true }

# Dependencies for python
pyo3 = { version = "*", features = ["auto-initialize"], optional = true }
numpy = { version = "*", optional = true }

# Dependencies for json
serde_json = { version = "*", optional = true }

# Dependencies for pickle
serde-pickle = { version = "*", optional = true }

# Dependencies for netcdf
netcdf-rs = { package = "netcdf", version = "*", optional = true }

# Dependencies for hdf5
hdf5-rs = { package = "hdf5", version = "*", optional = true }

# Dependencies for ebeam
special = { version = "*", optional = true }

# Dependency for seeding and ebeam
rand = { version = "*", optional = true }

# Dependencies for synthesis
roman = { version = "*", optional = true }

# Dependencies for comparison
approx = { version = "*", optional = true }

[build-dependencies]
regex = { version = "*", optional = true }

[profile.release-lto]
inherits = "release"
lto = "thin"
