[package]
name = "backstaff"
version = "0.3.0"
authors = ["Lars Frogner <lars.frogner@astro.uio.no>"]
description = "A flexible toolkit for working with Bifrost simulations"
edition = "2021"
default-run = "backstaff"

[features]
default = ["cli", "statistics"]
cli = ["dep:chrono", "dep:clap", "dep:clap_complete"]
command-graph = ["cli", "dep:petgraph"]
statistics = ["cli", "dep:float-pretty-print", "dep:ndarray-stats", "dep:noisy_float", "dep:pad"]
derivation = []
serialization = ["dep:serde", "ndarray/serde"]
python = ["dep:pyo3", "dep:numpy"]
json = ["serialization", "dep:serde_json"]
pickle = ["serialization", "dep:serde-pickle"]
netcdf = ["dep:netcdf-rs"]
hdf5 = ["dep:hdf5-rs", "dep:regex"]
seeding = ["dep:rand"]
corks = ["seeding"]
tracing = ["seeding"]
ebeam = ["tracing", "dep:rand", "dep:special", "dep:ndarray-npy"]
synthesis = ["derivation", "python", "dep:roman"]
for-testing = ["dep:approx"]
all-non-testing = [
    "cli", "command-graph", "statistics", "serialization", "python",
    "json", "pickle", "netcdf", "hdf5", "seeding", "corks", "tracing",
    "ebeam", "synthesis"
]

[dependencies]
# Dependencies for core
atomic-counter = "*"
atty = "*"
byteorder = "*"
ctrlc = {version = "*", features = ["termination"]}
ieee754 = "*"
indicatif = {version = "*", features = ["rayon"]}
lazy_static = "*"
ndarray = { version = "*", features = ["rayon"] }
num = "*"
paste = "*"
rayon = "*"
regex = "*"
sysinfo = { version = "*", default-features = false }
tempfile = "*"
quit = "*"

# Dependencies for cli
chrono = { version = "*", optional = true }
clap = { version = ">=3.0.0", features = ["default", "cargo"], optional = true }
clap_complete = { version = "*", optional = true }

# Dependencies for command-graph
petgraph = { version = "*", features = [], optional = true }

# Dependencies for statistics
float-pretty-print = { version = "*", optional = true }
ndarray-stats = { version = "*", optional = true }
noisy_float = { version = "*", optional = true }
pad = { version = "*", optional = true }

# Dependencies for serialization
serde = { version = "*", features = ["derive"], optional = true }

# Dependencies for python
pyo3 = { version = "*", features = ["auto-initialize"], optional = true }
numpy = { version = "*", optional = true }

# Dependencies for json
serde_json = { version = "*", optional = true }

# Dependencies for pickle
serde-pickle = { version = "*", optional = true }

# Dependencies for netcdf
netcdf-rs = { package = "netcdf", version = "*", optional = true }

# Dependencies for hdf5
hdf5-rs = { package = "hdf5", version = "*", optional = true }

# Dependencies for ebeam
special = { version = "*", optional = true }
ndarray-npy = { version = "*", optional = true }

# Dependency for seeding and ebeam
rand = { version = "*", optional = true }

# Dependencies for synthesis
roman = { version = "*", optional = true }

# Dependencies for for-testing
approx = { version = "*", optional = true }

[build-dependencies]
regex = { version = "*", optional = true }

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.test.package."*"]
opt-level = 3
